# Wrist-Rehabilitation-System-

./: adaptive_log.csv  mqtt_log.txt  run_full_system_test.sh  run_motion_anomaly_suite.sh  run_net_anomaly_suite.sh  stiffness_log.csv  test_motion_suite.sh
archive_unused/my_py_pkg/: package.xml  setup.py
archive_unused/my_py_pkg/my_py_pkg/: my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
archive_unused/rehab_system/: package.xml  setup.cfg  setup.py
install/: setup.sh
install/doctor_engine/lib/doctor_engine/: doctor_anomaly_handler  doctor_mqtt_bridge  doctor_network_anomaly_handler  doctor_node
install/patient_engine/share/patient_engine/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/patient_engine/share/patient_engine/config/: motion_thresholds_advanced.yaml  motion_thresholds_beginner.yaml
log/: latest_build  latest_list
src/doctor_engine/: package.xml  setup.cfg  setup.py
src/doctor_engine/doctor_engine/nodes/: doctor_dxl_cbpc_driver  doctor_node.py  doctor_role_manager.py
src/patient_engine/: setup.cfg  setup.py
src/patient_engine/resource/: patient_engine
src/wrist_replay/: package.xml  setup.cfg  setup.py
src/wrist_replay/urdf/: wrist.urdf  wrist_backup.urdf
test_logs/: network_detector_nano_test.py  run_network_loss_test.sh  summary_20251010_032026.txt
test_logs/anomaly_test_20251006_210630/: anomaly_test_20251006_210630_0.mcap  metadata.yaml
test_logs/anomaly_test_20251006_215703/: anomaly_test_20251006_215703_0.mcap  metadata.yaml
(+35 files in other folders)
