<?xml version="1.0"?>
<package format="3">
  <name>patient_engine</name>
  <version>0.0.1</version>
  <description>Patient-side runtime (control + MQTT bridge; safety later)</description>
  <maintainer email="anas@todo.todo">anas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

